[package]
name = "bolt"
version = "0.3.0"
authors = ["Bolt Labs, Inc <info@boltlabs.io>"]
description = "library for Blind Off-chain Lightweight Transactions (BOLT)"
keywords = ["zcash", "payment channels", "bolt"]
readme = "README.md"
homepage = "https://github.com/ZcashFoundation/libbolt"
repository = "https://github.com/ZcashFoundation/libbolt"
license = "MIT License"

[dependencies]
rand = "0.6"
rand_core = "0.4.0"
rand_xorshift = "0.1"
ff = { git = "https://github.com/boltlabs-inc/ff", branch = "master" }
pairing = { git = "https://github.com/boltlabs-inc/pairing", branch = "master", features = ["serde"] }
bincode = "0.6.1"
sodiumoxide = "0.2.5"
libc = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.0"
serde_bytes = "0.11.2"
time = "*"
secp256k1 = { version = "0.15.0", features = ["rand", "serde"] }
sha2 = { version = "0.8", default-features = false }

[dev-dependencies.bincode]
version = "~0.6.0"
default-features = false
features = ["rustc-serialize"]

[lib]
crate-type = ["lib", "cdylib"]

