[package]
name = "bolt"
version = "0.3.0"
authors = ["Bolt Labs, Inc <info@boltlabs.io>"]
description = "library for Blind Off-chain Lightweight Transactions (BOLT)"
keywords = ["zcash", "payment channels", "bolt"]
readme = "README.md"
homepage = "https://github.com/ZcashFoundation/libbolt"
repository = "https://github.com/ZcashFoundation/libbolt"
license = "MIT License"

[dependencies]
rand = "0.7"
ff_bl = { git = "https://github.com/boltlabs-inc/ff", branch = "master" }
pairing_bl = { git = "https://github.com/boltlabs-inc/pairing", branch = "master", features = ["serde"] }
libc = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.0"
serde_bytes = "0.11.2"
time = "*"
secp256k1 = { version = "0.16.0", features = ["serde"] }
sha2 = { version = "0.8", default-features = false }
hex = "0.3.2"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

